# whisper-dictate

./: .gitignore  README.md  project.md  pyproject.toml  setup-server.sh  setup-ydotool.sh  test_mlx_mac.sh
src/whisper_dictate/: __init__.py  __main__.py  cli.py  config.py  gui.py  init.py  notify.py  polish.py  qtgui.py  recorder.py  server.py  transcriber.py
src/whisper_dictate/backends/: __init__.py  base.py  linux.py  macos.py  windows.py
