[project]
name = "whisper-dictate"
version = "0.1.0"
description = "Local Whisper dictation that types into any application"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "soundfile>=0.12",
    # Graphical settings window + system-tray app (always available).
    "PySide6>=6.6",
]

[project.optional-dependencies]
macos = ["pynput>=1.7","mlx-whisper>=0.4"]
windows = ["pynput>=1.7"]

[project.scripts]
whisper-dictate = "whisper_dictate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_dictate"]
